fuchsia: add additional logging to diagnose failing timeouts

Also, fix passing override of --test-launcher-jobs on the command line,
useful for testing timeout-y code.

Bug: 755282
Change-Id: If8b2dcb6db724e12cf29f84b3adccc095a735403
Reviewed-on: https://chromium-review.googlesource.com/626936
Commit-Queue: Scott Graham <scottmg@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496407}
Former-commit-id: b5b481d642285400f22f80bac0f3404ca71eae73